{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 38,
  "lineage": "c1897364-cadc-8141-ad00-bec6867475fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0267067b7899948d4",
            "public_dns": "ec2-13-58-89-73.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.89.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sam-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-047b31e51608db6e4",
            "owner_id": "833082593100",
            "tags": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0267067b7899948d4",
            "id": "nat-0d33d1105330ecba4",
            "network_interface_id": "eni-0b51f2da8305017c9",
            "private_ip": "10.0.1.147",
            "public_ip": "13.58.89.73",
            "subnet_id": "subnet-047b80b27efbad27e"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.sam-igw",
            "aws_subnet.first-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mainpriavtert",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a6eb471ddd6511fe",
            "owner_id": "833082593100",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d33d1105330ecba4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sam-rt-private-1"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_nat_gateway.nat-gw",
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mainroutetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b70b107ce33cc9c3",
            "owner_id": "833082593100",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047b31e51608db6e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sam-rt-public-1"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_internet_gateway.sam-igw",
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "first-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0401260d31c362937",
            "route_table_id": "rtb-0a6eb471ddd6511fe",
            "subnet_id": "subnet-07beebdc21226e3e1"
          },
          "depends_on": [
            "aws_route_table.mainpriavtert",
            "aws_subnet.first-private-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "first-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d6bb389a4fdc41",
            "route_table_id": "rtb-0b70b107ce33cc9c3",
            "subnet_id": "subnet-047b80b27efbad27e"
          },
          "depends_on": [
            "aws_route_table.mainroutetable",
            "aws_subnet.first-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "second-private-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd6a16c85e71ebb6",
            "route_table_id": "rtb-0a6eb471ddd6511fe",
            "subnet_id": "subnet-02c4de9fb8e4fd280"
          },
          "depends_on": [
            "aws_route_table.mainpriavtert",
            "aws_subnet.second-private-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "second-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae7706b306b9c977",
            "route_table_id": "rtb-0b70b107ce33cc9c3",
            "subnet_id": "subnet-0f7e76a794d607652"
          },
          "depends_on": [
            "aws_route_table.mainroutetable",
            "aws_subnet.second-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "third-private-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf64a6823f292a45",
            "route_table_id": "rtb-0a6eb471ddd6511fe",
            "subnet_id": "subnet-0be7becca20b565d8"
          },
          "depends_on": [
            "aws_route_table.mainpriavtert",
            "aws_subnet.third-private-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "third-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9c462f1ec99e6d8",
            "route_table_id": "rtb-0b70b107ce33cc9c3",
            "subnet_id": "subnet-011b4165ba17f1088"
          },
          "depends_on": [
            "aws_route_table.mainroutetable",
            "aws_subnet.third-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:833082593100:subnet/subnet-07beebdc21226e3e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-07beebdc21226e3e1",
            "map_public_ip_on_launch": false,
            "owner_id": "833082593100",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:833082593100:subnet/subnet-047b80b27efbad27e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-047b80b27efbad27e",
            "map_public_ip_on_launch": true,
            "owner_id": "833082593100",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:833082593100:subnet/subnet-02c4de9fb8e4fd280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-02c4de9fb8e4fd280",
            "map_public_ip_on_launch": false,
            "owner_id": "833082593100",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:833082593100:subnet/subnet-0f7e76a794d607652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f7e76a794d607652",
            "map_public_ip_on_launch": true,
            "owner_id": "833082593100",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "third-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:833082593100:subnet/subnet-0be7becca20b565d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0be7becca20b565d8",
            "map_public_ip_on_launch": false,
            "owner_id": "833082593100",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "third-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:833082593100:subnet/subnet-011b4165ba17f1088",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-011b4165ba17f1088",
            "map_public_ip_on_launch": true,
            "owner_id": "833082593100",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-060a7cac024bcae4a"
          },
          "depends_on": [
            "aws_vpc.samvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "samvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:833082593100:vpc/vpc-060a7cac024bcae4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb2a12013a6aa8e4",
            "default_route_table_id": "rtb-07b82f262eb0c45ff",
            "default_security_group_id": "sg-00b57bf14bddcb80e",
            "dhcp_options_id": "dopt-1940ae72",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-060a7cac024bcae4a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07b82f262eb0c45ff",
            "owner_id": "833082593100",
            "tags": {
              "Name": "MyVpc"
            }
          }
        }
      ]
    }
  ]
}